[metadata]
name = <OSpy>
version = <version number: 0.0.0>
license = <MIT>
description = <A short description>
long_description = file: README.rst
author = <Thomas Castelot, Victoria Krajcovicova>

[options]
packages = find:
package_dir =
    =src
include_package_data = True

[options.packages.find]
where=src
